try fix the bg on mobile

--- a/style.css
+++ b/style.css
@@ -5,8 +5,18 @@ body {
   color: #fff;
   min-height: 100vh;
   overflow-x: hidden;
-  background: url('images/background.jpg') no-repeat center top fixed;
-  background-size: 100% auto; /* fit width, scale height */
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url('images/background.jpg') no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   background-attachment: fixed;
 }
 
